<resources>
    <string name="app_name">College Campus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">1049984635086541</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="sign_up">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="skip">Skip</string>
    <string name="facebook">Log In With Facebook</string>
    <string name="google">Log In With Google</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="logo_desc">App Logo</string>
    <string name="term_cond">I read and accept terms and conditions</string>
    <string name="already_acc">Already have an Account </string>
    <string name="forget_pass">Recover your Password</string>
    <string name="opt_verification">OTP Verification</string>
    <string name="reset_pass">Send reset link</string>
    <string name="verify">Verify OTP</string>
    <string name="login_heading">Log In to your Account</string>
    <string name="or">-----OR-----</string>
    <string name="account_text">Do not have an Account </string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="otp_enter">Enter OTP</string>


</resources>
