<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/otpacitivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context="blog.sidvitech.com.authentication.Otp_Verification.otp_verfication">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_height="@dimen/logo_height"
                    android:layout_width="@dimen/logo_width"
                    android:background="@drawable/back"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_verification"
                    android:gravity="center"
                    android:textSize="@dimen/heading_size"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/otptextlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/otp_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/otp_enter"
                        android:background="@drawable/edittextfield"
                        android:cursorVisible="false"
                        android:inputType="textEmailAddress"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>



                <Button
                    android:layout_width="@dimen/button_horizontal_margin"
                    android:layout_height="@dimen/button_vertical_margin"
                    android:layout_marginTop="20dp"
                    android:text="@string/verify"
                    android:background="@drawable/loginbutton"
                    android:textColor="@color/white"
                    android:id="@+id/btnverify"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:gravity="center"
                    android:id="@+id/skip"
                    android:textColor="@color/primary_dark"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp" />

            </LinearLayout>

        </LinearLayout>

</FrameLayout>
